--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,57 +1,45 @@
-<div class="col-lg-8 col-sm-8 col-md-8 col-xs-12">
-    <div class="left_content left_align">
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8 col-sm-8 col-md-8 col-xs-12">
+      <div class="left_content left_align">
         <h1><label>{{ entry.heading_welcome }}</label></h1>
         <p>&nbsp;</p>
-		<h1>{{ entry.heading_find_rehab }}</h1>
+        <h1>{{ entry.heading_find_rehab }}</h1>
         <p>{{ entry.content_find_rehab_paragraph_1 }}</p>
-		<p>&nbsp;</p>
-		<p>{{ entry.content_find_rehab_paragraph_2 }}</p>
-		<p>&nbsp;</p>
-		<p>{{ entry.content_find_rehab_paragraph_3 }}</p>
-		<p>&nbsp;</p>
-		<p>{{ entry.content_find_rehab_paragraph_4 }}</p>
-		<p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>{{ entry.content_find_rehab_paragraph_2 }}</p>
+        <p>&nbsp;</p>
+        <p>{{ entry.content_find_rehab_paragraph_3 }}</p>
+        <p>&nbsp;</p>
+        <p>{{ entry.content_find_rehab_paragraph_4 }}</p>
+        <p>&nbsp;</p>
         <div class="row">
-            <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-                <h1 class="listing_content">
+          <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+            <h1 class="listing_content">
                     <label>{{ entry.heading_featured_treatment_center }}</label>
-                </h1>
-            </div>
-
-			<div class="col-lg-4 col-sm-6 col-md-4 col-xs-12" ng-repeat="listing in entry.listings">
-                <div class="listing_block">
-                    <div class="block_img">
-                        <a class="thumbnail" ng-href="{{ listing.listing_href }}">
-                            <img class="" ng-src="{{ listing.thumbnail }}">
-                        </a>
-                    </div>
-                    <div class="block_content">
-                        <div class="block_heading">
-                            <h2 class="feat_head"><a ng-href="{{ listing.listing_href }}">{{ listing.content_feat_head}}</a></h2>
-                        </div>
-                        <p> {{ listing.content_paragraph}} </p>
-                    </div>
-                    <a ng-href="{{ listing.listing_href }}">{{ listing.content_view_listing}}</a>
-                </div>
-            </div>
-
-
-
-
-            <!-- Treatment Directory -->
-
-            <!--  Map State Heading     -->					
-            <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-                <h1 class="listing_content">
+                </h1> </div>
+          <div class="col-lg-4 col-sm-6 col-md-4 col-xs-12" ng-repeat="listing in entry.listings">
+            <div class="listing_block">
+              <div class="block_img">
+                <a class="thumbnail" ng-href="{{ listing.listing_href }}"> <img class="" ng-src="{{ listing.thumbnail }}"> </a>
+              </div>
+              <div class="block_content">
+                <div class="block_heading">
+                  <h2 class="feat_head"><a ng-href="{{ listing.listing_href }}">{{ listing.content_feat_head}}</a></h2> </div>
+                <p> {{ listing.content_paragraph}} </p>
+              </div> <a ng-href="{{ listing.listing_href }}">{{ listing.content_view_listing}}</a> </div>
+          </div>
+          <!-- Treatment Directory -->
+          <!--  Map State Heading     -->
+          <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+            <h1 class="listing_content">
                     <label> {{ entry.heading_search_by_state }} </label>
-                </h1>
-            </div>
-            <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-                <!--- Map content  Start   -->
-                <div onselectstart="return false;" class="unselectable">
-                    <div id="mapwrapper">
-                        <div id="map_base">
-                            <svg version="1.1" id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 540 360" xml:space="preserve">
+                </h1> </div>
+          <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+            <!--- Map content  Start   -->
+            <div onselectstart="return false;" class="unselectable">
+              <div id="mapwrapper">
+                <div id="map_base"> <svg version="1.1" id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 540 360" xml:space="preserve">
                             <g id="shadow">
                             <path d="M505.9,49.7c-0.101,0.1-1.301,1.8-3.5,5c-2.301,3.199-3.301,4.899-3.301,5.1c-0.1,2.1-0.5,3.3-1,3.6
                                   c-0.6,0.2-0.899,0.801-0.8,1.9c0,0.6-0.3,1.1-0.899,1.4c-0.4,0.399-0.5,1.1-0.301,2.199c0.301,1.301,0.301,2,0,2.2
@@ -1151,20 +1139,16 @@
                             <text id="WY" transform="matrix(1 0 0 1 157 110)" cursor="pointer"><tspan x="0" y="0" font-family="&#39;Arial&#39;" font-size="11" fill="#666666">WY</tspan></text>
                             <text id="DC" transform="matrix(1 0 0 1 474 204)" cursor="pointer"><tspan x="0" y="0" font-family="&#39;Arial&#39;" font-size="10" fill="#666666">DC</tspan></text>
                             </g>
-                            </svg>
-                        </div>	
-                    </div>							
-                </div>							
-                <!--- Map content End -->
-                <p>{{ entry.content_below_search_by_state }}</p><br><br><br>
-
-                <a href="#"><img class="img-responsive" ng-src="{{ entry.image_before_footer }}"></a>
-            </div>					
+                            </svg> </div>
+              </div>
+            </div>
+            <!--- Map content End -->
+            <p>{{ entry.content_below_search_by_state }}</p><br><br><br>
+            <a href="#"><img class="img-responsive" ng-src="{{ entry.image_before_footer }}"></a>
+          </div>
         </div>
-    </div> 
-
-
-
-
-
+      </div>
+    </div>
+    <side-panel></side-panel>
+  </div>
 </div>
