--- a/app/sponsoredListing/view.html
+++ b/app/sponsoredListing/view.html
@@ -7,7 +7,7 @@
         </h1>
         <p>{{ entry.content_1 }}</p>
         <div class="row">
-          <!------ Sponsor Listing -------->
+          <!-- First section of the listing -->
           <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 sponsor_div">
             <ul class="width-100">
               <li ng-repeat="listing in entry.listings" class="width-100">
@@ -29,14 +29,18 @@
               </li>
             </ul>
           </div>
+
+          <!-- Second section of the listing-->
+          <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+            <h1 class="listing_content">
+              <label>{{ entry.heading_2}}</label>
+            </h1>
+            <p>{{ entry.content_2 }}</p>
+          </div>
+
         </div>
       </div>
     </div>
     <side-panel></side-panel>
   </div>
-</div>
-iv>
-</div>
-<side-panel></side-panel>
-</div>
 </div>
