--- a/app/treatmentcenterDetail/view.html
+++ b/app/treatmentcenterDetail/view.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="left_content top_text">
       <h1>
-        <label>New Start Detox</label>
+        <label>{{ entry.center_name }}</label>
       </h1>
     </div>
     <div class="row">
@@ -47,7 +47,8 @@
             <div class="innerMessage"></div>
           </div>
           <h1>
-            <label>New Start Detox Details</label>
+            <label>{{ entry.center_name}}
+              Details</label>
           </h1>
           <div class="row">
             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
@@ -56,7 +57,7 @@
                   <label for="userf">Name:</label>
                 </div>
                 <div class="col-md-8 col-sm-8 col-xs-12 treatment_detail">
-                  <p>{{ entry.name }}</p>
+                  <p>{{ entry.center_name }}</p>
                 </div>
               </div>
               <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -64,7 +65,7 @@
                   <label for="userl">Details:</label>
                 </div>
                 <div class="col-md-8 col-sm-8 col-xs-12 treatment_detail">
-                  <p>{{ entry.details }}</p>
+                  <p>{{ entry.description }}</p>
                 </div>
               </div>
               <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -72,7 +73,7 @@
                   <label>Website Link:</label>
                 </div>
                 <div class="col-md-8 col-sm-8 col-xs-12 treatment_detail">
-                  <a href="{{ entry.website_link }}">{{ entry.website_link }}</a>
+                  <a href="{{ entry.website_link }}">{{ entry.center_web_link }}</a>
                 </div>
               </div>
               <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -80,7 +81,7 @@
                   <label>Phone Number:</label>
                 </div>
                 <div class="col-md-8 col-sm-8 col-xs-12 treatment_detail">
-                  <p>{{ entry.phone_no }}</p>
+                  <p>{{ entry.phone }}</p>
                 </div>
               </div>
               <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -88,7 +89,7 @@
                   <label>Address:</label>
                 </div>
                 <div class="col-md-8 col-sm-8 col-xs-12 treatment_detail">
-                  <p>{{ entry.location }}</p>
+                  <p>{{ entry.address }}</p>
                 </div>
               </div>
             </div>
@@ -96,31 +97,32 @@
 
           <!--   About us    -->
           <h1 class="display_full">
-            <label>About New Start Detox</label>
+            <label>{{ entry.heading_1 }}</label>
           </h1>
           <div class="margin_top_adjust_go col-md-12 col-sm-12 col-xs-12 ">
-            <span class="text_style_about margin_bottom_adjust_go">{{ entry.about_us}}</span>
+            <span class="text_style_about margin_bottom_adjust_go">{{ entry.content_1 }}</span>
           </div>
 
           <!--   Treatment Approach    -->
           <h1 class="display_full">
-            <label>Treatment Approach</label>
+            <label>{{ entry.heading_2 }}</label>
           </h1>
           <div class="margin_top_adjust_go col-md-12 col-sm-12 col-xs-12">
-            <span class="text_style_about margin_bottom_adjust_go">{{ entry.treatment_approach}}</span>
+            <span class="text_style_about margin_bottom_adjust_go">{{ entry.content_2 }}</span>
           </div>
 
           <!--   Unique Points   -->
           <h1 class="display_full">
-            <label>What is Unique about New Start Detox</label>
+            <label>{{ entry.heading_3 }}</label>
           </h1>
           <div class="margin_top_adjust_go col-md-12 col-sm-12 col-xs-12">
-            <span class="text_style_about margin_bottom_adjust_go">{{ entry.unique_points}}</span>
+            <span class="text_style_about margin_bottom_adjust_go">{{ entry.content_3 }}</span>
           </div>
 
           <!--   Reviews    -->
           <h1 class="display_full">
-            <label>New Start Detox Reviews</label>
+            <label>{{ entry.heading_4 }}
+            </label>
           </h1>
           <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
