added new webpack plugin to inject link and script tags into html page

--- a/app/treatmentcenterDetail/view.html
+++ b/app/treatmentcenterDetail/view.html
@@ -207,7 +207,7 @@
           <div class="text_style_detail_page">
             <span>Location:</span>
             <p class="margin_top_adjust_go">
-              <i class="glyphicon glyphicon-map-marker"></i>{{ entry.location}}
+              <i class="glyphicon glyphicon-map-marker"></i>{{ entry.address }}
             </p>
           </div>
           <div class="text_style_detail_page">
@@ -223,7 +223,7 @@
           </div>
         </div>
         <div class="detail_form_main map_margin">
-          <div class="detail_heading">{{ entry.location}}
+          <div class="detail_heading">{{ entry.address }}
             <h2>
               <label>Map</label>
             </h2>
