--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1144,7 +1144,7 @@
             </div>
             <!--- Map content End -->
             <p>{{ entry.content_below_search_by_state }}</p><br><br><br>
-            <a href="#"><img class="img-responsive" ng-src="{{ entry.image_before_footer }}"></a>
+            <a href="#" ng-controller="advertisements"><img class="img-responsive" ng-src="{{ footer_adv_banner }}"></a>
           </div>
         </div>
       </div>
