--- a/app/sidePanel/view.html
+++ b/app/sidePanel/view.html
@@ -9,8 +9,8 @@
   <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0">
     <div class="right_content cont_right">
       <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 ">
-        <div class="banner_adjust">
-          <a href="http://www.eliterehabplacement.com"><img class="" src="uploads/advertisement_images/small/1428613459-anadlisting.jpg" /></a>
+        <div class="banner_adjust" ng-controller="advertisements">
+          <a href="http://www.eliterehabplacement.com"><img class="" ng-src="sidebar_adv_banner" /></a>
         </div>
       </div>
     </div>
