added header componnet to refactor header section in index.html

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>sponsorhome Reviews on Addiction Network</title>
+    <title>Addiction Network</title>
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -189,89 +189,8 @@
   </head>
 
   <body>
-    <!-- first navigation -->
-    <div class=" first_nav">
-      <div class="container">
-        <div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
-          <div class="left_header">
-            <div class="img_outer_in_head pull-left" style="display:inline-block;">
-              <img width="75" height="75" src="uploads/2014/09/banner_12-150x150.png" class="attachment-75x80 size-75x80 wp-post-image" alt="banner_1" srcset="uploads/2014/09/banner_12-150x150.png 150w, uploads/2014/09/banner_12-44x44.png 44w" sizes="(max-width: 75px) 100vw, 75px"/>
-            </div>
-            <div class="text_style_new">
-              For assistance in finding treatment,
-            </div>
-            <div class="text_style_special">
-              <img src="themes/addiction/images/phone.png" class="pull-left"/>
-              Call 949-444-9123
-            </div>
-            <div class="text_style_new">
-              To speak to a live counselor
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
-          <div class="img_outer_ban" ng-controller="AdvertisementCtrl">
-            <a href="http://www.avalonmalibu.com/?apcid=9230​"><img class="" ng-src="{{ header_adv_banner }}"/></a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- second navigation -->
-    <div class="navbar navbar-default header_bg_texture" role="navigation">
-      <div class="container width_adjust_header ">
-        <div class="navbar-header  padding_left_new ">
-          <a class="hdr_logo_div" href="http://www.addictionnetwork.com"><img class="img-responsive" src="themes/addiction/images/addiction_logo.png"/></a>
-          <button type="button" class="navbar-toggle toggle_button" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="navbar-collapse collapse to_be_pull_left new_class_for_collaspe">
-          <!--<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
-            <a class="addthis_button_facebook"></a>
-            <a class="addthis_button_google_plusone_badge"></a>
-            <a class="addthis_button_compact"></a>
-          </div>-->
-          <ul class="social_ul">
-            <li>
-              <a href="https://www.facebook.com/theaddictionnetwork" target="_blank"><img src="themes/addiction/images/fb-2.png"></a>
-            </li>
-            <li>
-              <a href="https://twitter.com/AddictionNet1" target="_blank"><img src="themes/addiction/images/twitter-ff-2.png"></a>
-            </li>
-            <li>
-              <a href="https://www.google.com/+Addictionnetwork1" target="_blank"><img src="themes/addiction/images/gglplus.png"></a>
-            </li>
-          </ul>
-          <script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=andr923"></script>
-          <div class="nav_align ">
-            <ul class="nav navbar-nav new_class_for_sub_menu header_main_menu fonnt">
-              <li>
-                <a class='comm' href="#">Home</a>
-              </li>
-              <li>
-                <a class='comm' href="#/treatment-center-map">Treatment Centers</a>
-              </li>
-              <li>
-                <a class='comm' href="#/about">About Us</a>
-              </li>
-              <li>
-                <a class='comm' href="#/blog/">Blog</a>
-              </li>
-              <li>
-                <a class='comm' href="#/contact-us/">Contact Us</a>
-              </li>
-              <li>
-                <a class='comm' href="#/center-detail" class="active">Add Listing</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <!--/.nav-collapse -->
-      </div>
-    </div>
+    <!-- First and second navigation -->
+    <header></header>
 
     <!--    Sign In    -->
     <div class="modal fade margin_top_to_modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
