Integrated the map component to Treatmentcenter page

--- a/app/treatmentcenterMap/treatment-center-map.html
+++ b/app/treatmentcenterMap/treatment-center-map.html
@@ -215,7 +215,7 @@
                         <div onselectstart="return false;" class="unselectable">
                             <div id="mapwrapper">
                                 <div id="map_base">
-                                    <search-by-state-treatment></search-by-state-treatment>
+                                    <state-Map></state-Map>
                                 </div>	
                             </div>							
                         </div>	
