added myprofile and addtreatmentcenter features

--- a/app/header/view.html
+++ b/app/header/view.html
@@ -73,6 +73,9 @@
             <a class='comm' href="#/contact-us/">Contact Us</a>
           </li>
           <li>
+            <a class='comm' href="#/my-profile">My Profile</a>
+          </li>
+          <li>
             <a class='comm' href="#/center-detail" class="active">Add Listing</a>
           </li>
         </ul>
