--- a/app/myTreatmentCenters/view.html
+++ b/app/myTreatmentCenters/view.html
@@ -2,9 +2,9 @@
   <div class="profileUpdated" style="display: none;"></div>
   <div class="row">
     <!-- Left Section  -->
-    <profile-nav-section profilePic="$ctrl.profile.profile_pic"></profile-nav-section>
+    <profile-nav-section></profile-nav-section>
 
     <!-- Right Section  -->
-    <profile-main profile="$ctrl.profile"></profile-main>
+    <centers-main></centers-main>
   </div>
 </div>
