completed editTreatmentCenter page

--- a/app/featuredTreatmentCenter/view.html
+++ b/app/featuredTreatmentCenter/view.html
@@ -18,7 +18,7 @@
           <p></p>
 
           <div class="row">
-            <a href="#/my-treatment-center">
+            <a href="#/my-treatment-centers">
               <input type="button" value="Back to Treatment Center" class="btn btn-primary modal_btn">
             </a>
           </div>
