--- a/app/myTreatmentCenters/centerTable/view.html
+++ b/app/myTreatmentCenters/centerTable/view.html
@@ -38,19 +38,15 @@
               <a ng-href="{{ center.viewLink }}" data-toggle="tooltip" data-placement="bottom" title="View">
                 <i class="glyphicon glyphicon-eye-open"></i>
               </a>
-              <a></a>
               <a ng-href="{{ center.editLink }}" data-toggle="tooltip" data-placement="bottom" title="Edit">
                 <i class="glyphicon glyphicon-edit"></i>
               </a>
-              <a></a>
-              <a ng-href="{{ center.deleteLink }}" data-toggle="tooltip" data-placement="bottom" title="Delete">
+              <a href ng-click="$ctrl.onDelete({id: center.id })" data-toggle="tooltip" data-placement="bottom" title="Delete">
                 <i class="glyphicon glyphicon-trash"></i>
               </a>
-              <a></a>
-              <a ng-href="{{ center.activateLink }}" data-toggle="tooltip" data-placement="bottom" title="Deactivate It">
-                <i class="">Activate</i>
+              <a href ng-click="$ctrl.onActivate({id: center.id})" data-toggle="tooltip" data-placement="bottom" title="Deactivate It">
+                <i class="">{{ center.active ? "Deactivate": "Activate"}}</i>
               </a>
-              <a></a>
             </td>
           </tr>
 
