--- a/app/home/view.html
+++ b/app/home/view.html
@@ -6,12 +6,12 @@
         <welcome></welcome>
         <div class="row">
           <!-- Featured Treatment Center Section -->
-          <featured-treatment-center listings="listings"></featured-treatment-center>
+          <featured-treatment-center listings="$ctrl.listings"></featured-treatment-center>
           <!-- Search By State Section -->
           <search-by-state></search-by-state>
-          <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+          <!-- <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
             <a href="#" ng-controller="AdvertisementCtrl"><img class="img-responsive" ng-src="{{ footer_adv_banner }}"></a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
