--- a/app/index.html
+++ b/app/index.html
@@ -16,11 +16,11 @@
     <link rel="shortcut icon" href="themes/addiction/images/favicon.ico"/>
 
     <!-- This site is optimized with the Yoast SEO plugin v3.5 - https://yoast.com/wordpress/plugins/seo/ -->
-    <link rel="canonical" href="http://www.addictionnetwork.com/sponsorhome/"/>
+    <link rel="canonical" href="http://www.addictionnetwork.com/"/>
     <meta property="og:locale" content="en_US"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="sponsorhome - Addiction Network"/>
-    <meta property="og:url" content="http://www.addictionnetwork.com/sponsorhome/"/>
+    <meta property="og:title" content="Addiction Network"/>
+    <meta property="og:url" content="http://www.addictionnetwork.com/"/>
     <meta property="og:site_name" content="Addiction Network"/>
     <!-- / Yoast SEO plugin. -->
     <link rel='dns-prefetch' href='//fonts.googleapis.com'/>
@@ -412,7 +412,7 @@
 
     <!-- Middle Content-->
     <div class="middle_content_div">
-      <div ng-view></div>
+      <ui-view></ui-view>
     </div>
     <!-- End Middle Content-->
 
