--- a/app/treatmentCenterDetail/view.html
+++ b/app/treatmentCenterDetail/view.html
@@ -211,12 +211,13 @@
           <div class="text_style_detail_page">
             <span class="margin_top_adjust_go">Call Us:</span>
             <p class="margin_top_adjust_go">
-              <i class="glyphicon glyphicon-phone-alt"></i>{{ $ctrl.entry.phone}}</p>
+              <i class="glyphicon glyphicon-phone-alt"></i>{{ $ctrl.entry.phone }}
+            </p>
           </div>
           <div class="text_style_detail_page">
             <span class="margin_top_adjust_go">Email Us:</span>
             <p class="margin_top_adjust_go">
-              <i class="glyphicon glyphicon-envelope mail_icon"></i>{{ $ctrl.entry.email}}
+              <i class="glyphicon glyphicon-envelope mail_icon"></i>{{ $ctrl.entry.email }}
             </p>
           </div>
         </div>
