--- a/app/sidePanel/sideCard/view.html
+++ b/app/sidePanel/sideCard/view.html
@@ -1,12 +1,13 @@
 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0">
   <div class="right_content cont_right">
     <h2>
-    <label>{{ $ctrl.type }}</label>
-  </h2>
+      <label>{{ $ctrl.type }}</label>
+    </h2>
     <ul class="list-unstyled">
       <li ng-repeat="listing in $ctrl.listings">
-        <a ng-href="{{ listing.link }}">
-          <span class="glyphicon glyphicon-chevron-right"></span> {{ listing.name }}
+        <a ui-sref="{{ listing.uiSref }}">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          {{ listing.name }}
         </a>
       </li>
     </ul>
