--- a/app/sidePanel/view.html
+++ b/app/sidePanel/view.html
@@ -6,13 +6,13 @@
   <side-card type="Additional Services"></side-card>
   <side-card type="Payment"></side-card>
   <side-card type="By Drug"></side-card>
-  <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0">
+  <!-- <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0">
     <div class="right_content cont_right">
       <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 ">
         <div class="banner_adjust" ng-controller="AdvertisementCtrl">
-          <a href="http://www.eliterehabplacement.com"><img class="" ng-src="sidebar_adv_banner" /></a>
+          <a href="http://www.eliterehabplacement.com"><img class="" ng-src="sidebar_adv_banner"/></a>
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
