--- a/app/sponsorHome/view.html
+++ b/app/sponsorHome/view.html
@@ -3,14 +3,14 @@
     <div class="col-lg-8 col-sm-8 col-md-8 col-xs-12">
       <div class="left_content left_align">
         <h1>
-          <label>{{ entry.heading_1 }}</label>
+          <label>{{ $ctrl.entry.heading_1 }}</label>
         </h1>
-        <p>{{ entry.content_1 }}</p>
+        <p>{{ $ctrl.entry.content_1 }}</p>
         <div class="row">
           <!-- First section of the listing -->
           <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 sponsor_div">
             <ul class="width-100">
-              <li ng-repeat="listing in entry.listings" class="width-100">
+              <li ng-repeat="listing in $ctrl.entry.listings" class="width-100">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                   <div class="sponsor_img">
                     <a ng-href="{{ listing.center_web_link }}" class="thumbnail" target="blank">
@@ -20,7 +20,7 @@
                   <div class="sponsor_img" style="width:65%;">
                     <h3>
                       <a ng-href="{{listing.center_web_link}}" target="blank">
-                        {{ listing.center_name}}
+                        {{ listing.center_name }}
                       </a>
                     </h3>
                     <p>{{ listing.description }}</p>
@@ -33,9 +33,9 @@
           <!-- Second section of the listing-->
           <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
             <h1 class="listing_content">
-              <label>{{ entry.heading_2}}</label>
+              <label>{{ $ctrl.entry.heading_2 }}</label>
             </h1>
-            <p>{{ entry.content_2 }}</p>
+            <p>{{ $ctrl.entry.content_2 }}</p>
           </div>
 
         </div>
