--- a/app/sponsorAds/add/main/view.html
+++ b/app/sponsorAds/add/main/view.html
@@ -1,13 +1,29 @@
-<div class="middle_content_div">
-    <div class="container">
+<div class="col-md-8 col-sm-8 col-xs-12 col-lg-9">
+    <div class="heading_main_div">
+        <h2>
+            <label>Add Sponsor Ad </label>
+        </h2>
+
+    </div>
+    <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
+
         <div class="row">
-            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-                <div class="left_content">
-                    <h1>
-                        <label>Edit Sponsor Ad</label>
-                    </h1>
-                    <div class="row">
-                        <form name="sponsorAdsForm" ng-controller="editSponsorAdsCtrl as $ctrl">
+
+            <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
+                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 pull-right ">
+
+                    <!-- bg_add_treat -->
+                    <div class="col-md-12 col-xs-12 col-sm-12 padding_0">
+                        <a href="javascript:history.go(-1);">
+                            <span class="modal_btn btn btn-primary margin_bottom_15_add pull-right  text-right">
+                                <i class="glyphicon glyphicon-hand-left"></i>
+                                Back
+                            </span>
+                        </a>
+
+                    </div>
+                </div>
+                <form name="sponsorAdsForm" enctype="multipart/form-data">
                             <input name="customertype" value="owner" type="hidden">
                             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
                                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -20,7 +36,7 @@
                                 </div>
                                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
                                     <div class="col-md-4 col-sm-4 col-xs-12">
-                                        <label for="name">Name:</label>
+                                        <label for="name">Name: </label>
                                     </div>
                                     <div class="col-md-8 col-sm-8 col-xs-12">
                                         <input placeholder="Name" name="name" id="name" class="form-control required" type="text" ng-model="$ctrl.name">
@@ -32,9 +48,10 @@
                                         <label for="upload_img">Upload Image</label>
                                     </div>
                                     <div class="col-md-8 col-sm-8 col-xs-12">
-                                        <input name="image" id="image" class="span2 text_file center_image" file-model="$ctrl.image" type="file">
+                                        <!--  <input name="image" id="image" class="span2 text_file center_image" ng-model="$ctrl.image" type="file"> -->
 
-                                        <img ng-src="{{$ctrl.oldimage}}" width="100">
+                                        <input file-model="$ctrl.image" type="file" name="image" id="image" class="center_image" />
+
                                     </div>
                                 </div>
 
@@ -62,8 +79,11 @@
                                         <label for="cpwd">Sponsor Ads </label>
                                     </div>
                                     <div class="col-md-8 col-sm-8 col-xs-12">
-                                        <spons-ads-categories on-update="$ctrl.onCatgUpdate(selected)"></spons-ads-categories>
-                                    </div>
+                            <select name="$ctrl.sponsored_listing_layout_ids[]" id="sposnor_ad_cat" class="required multiselect" multiple="multiple" title="Select (Price in $)" >
+                            <optgroup><option ng-repeat="normal in $ctrl.sponsored_ad_select_normal" value="{{normal.id}}">{{normal.name}}</option></optgroup>
+                            <optgroup><option ng-repeat="normal in $ctrl.sponsored_ad_select_state" value="{{normal.id}}">{{normal.name}}</option></optgroup>
+                                </select>
+                                   </div>
                                 </div>
 
                                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -71,23 +91,29 @@
                                         <label for="text"> Payment Amount</label>
                                     </div>
                                     <div class="col-md-8 col-sm-8 col-xs-12">
-                                        <input placeholder="Payment Amount" id="payment_amount" name="payment_amount" class="form-control required" type="number" ng-model="$ctrl.payment_amount">
+                                        <input placeholder="Payment Amount" id="payment_amount" name="payment_amount" class="form-control required" type="number" disabled="">
                                     </div>
                                 </div>
 
                                 <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
-                                    <input class="btn btn-primary modal_btn btn_size pull-left" value="Submit" ng-click="$ctrl.submit()" id="submit" type="button">
-                                    <span ng-show="$ctrl.success_msg">Updated </span>
+                                    <input class="btn btn-primary modal_btn btn_size pull-left" value="Submit" id="submit" type="button" ng-click="$ctrl.submit()">
+
+                                    <span ng-show="$ctrl.success_msg" style="color:green;">Added</span>
                                 </div>
                                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub">
                                     <div class="company_adds">
                                     </div>
                                 </div>
                             </div>
-                        </form>
-                    </div>
-                </div>
+                        </form>              
+
             </div>
-        </div>
+
+        </div>   
+
     </div>
 </div>
+
+
+
+
