--- a/app/sponsorAds/list/view.html
+++ b/app/sponsorAds/list/view.html
@@ -1,11 +1,11 @@
 <div class="container">
   
   <div class="" style="display: none;"></div>
-  <div class="row"  >
+  <div class="row" ng-controller="SponsorAdsCtrl as $ctrl" >
     <!-- Left Section  -->
     <profile-nav-section></profile-nav-section>
 
     <!-- Right Section  -->
-    <banner-ads-list ></banner-ads-list>
+   <sponsor-ads-list-main></sponsor-ads-list-main>
   </div>
 </div>
