added htmlhint to lint html files

--- a/app/addListing/view.html
+++ b/app/addListing/view.html
@@ -1,6 +1,6 @@
 <div class="middle_content_div">
   <div class="container">
-    <div class="row">
+          <div class="row">
       <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
         <div class="left_content">
           <h1>
@@ -67,7 +67,7 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input placeholder="Last Name" id="last_name" name="user_last_name" class="form-control required" type="text" ng-model="$ctrl.last_name">
+                    <input placeholder="Last Name" name="user_last_name" class="form-control required" type="text" ng-model="$ctrl.last_name">
 
                   </div>
                 </div>
@@ -78,7 +78,7 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input placeholder="Company" id="last_name" name="user_company" class="form-control required" type="text" ng-model="$ctrl.company">
+                    <input placeholder="Company" name="user_company" class="form-control required" type="text" ng-model="$ctrl.company">
 
                   </div>
                 </div>
@@ -132,7 +132,7 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input id="website" name="heading1" class="form-control required" type="text" ng-model="$ctrl.heading_1" placeholder="Heading1">
+                    <input name="heading1" class="form-control required" type="text" ng-model="$ctrl.heading_1" placeholder="Heading1">
                   </div>
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -141,7 +141,7 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input id="website" name="heading2" class="form-control required" type="text" ng-model="$ctrl.heading_2" placeholder="Heading2">
+                    <input name="heading2" class="form-control required" type="text" ng-model="$ctrl.heading_2" placeholder="Heading2">
                   </div>
                 </div>
 
@@ -151,7 +151,7 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input id="website" name="heading3" class="form-control required" type="text" ng-model="$ctrl.heading_3" placeholder="Heading3">
+                    <input name="heading3" class="form-control required" type="text" ng-model="$ctrl.heading_3" placeholder="Heading3">
                   </div>
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -160,7 +160,7 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input id="website" name="heading4" class="form-control required" type="text" ng-model="$ctrl.heading_4" placeholder="Heading4">
+                    <input name="heading4" class="form-control required" type="text" ng-model="$ctrl.heading_4" placeholder="Heading4">
                   </div>
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -205,7 +205,7 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input id="website" name="address_line_1" class="form-control required" type="text" ng-model="$ctrl.address_line_1" placeholder="Address Line 1">
+                    <input name="address_line_1" class="form-control required" type="text" ng-model="$ctrl.address_line_1" placeholder="Address Line 1">
                   </div>
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -214,7 +214,7 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input id="website" name="address_line_2" class="form-control required" type="text" ng-model="$ctrl.address_line_2" placeholder="Address Line 2">
+                    <input name="address_line_2" class="form-control required" type="text" ng-model="$ctrl.address_line_2" placeholder="Address Line 2">
                   </div>
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -280,7 +280,7 @@
                     <input name="image_data[]" id="galler_image" class="span2 text_file multi center_image" type="file" file-model="$ctrl.image_data">
                   </div>
                 </div>
-                <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
+                    <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
                   <input class="btn btn-primary modal_btn btn_size pull-left" value="Submit" id="submit" type="button" ng-click="$ctrl.submit()">
 
                   <span style="color:green;" ng-show="success_msg">Added
