--- a/app/myProfile/view.html
+++ b/app/myProfile/view.html
@@ -2,7 +2,7 @@
   <div class="profileUpdated" style="display: none;"></div>
   <div class="row">
     <!-- Left Section  -->
-    <profile-nav-section profilePic="$ctrl.profile.profile_pic"></profile-nav-section>
+    <profile-nav-section profile-pic="$ctrl.profile.profile_pic"></profile-nav-section>
 
     <!-- Right Section  -->
     <profile-main profile="$ctrl.profile"></profile-main>
