--- a/app/sponsorAds/view.html
+++ b/app/sponsorAds/view.html
@@ -47,7 +47,7 @@
                                                         <a href="/#/sponsor-ads-view/{{list.id}}/{{list.title}}" data-toggle="tooltip" data-placement="bottom" title="View"><i class="glyphicon glyphicon-eye-open"></i></a>
                                                         <a href="/#/sponsor-ads-edit/{{list.id}}/{{list.title}}" data-toggle="tooltip" data-placement="bottom" title="Edit"><i class="glyphicon glyphicon-edit"></i></a>
                                                         <a href="javascript:;" data-toggle="tooltip" data-placement="bottom" ng-click="$ctrl.actDect(list.id)"><i class="">Activate</i></a>
-                                                        <!--<span ng-show="$ctrl.status.show">{{$ctrl.status.msg}}</span></td>-->
+                                                        <!--<span ng-show="$ctrl.status.show">{{$ctrl.status.msg}}</span>--></td>
                                                 </tr>
 
                                             </tbody>
