--- a/app/treatmentCenterMap/view.html
+++ b/app/treatmentCenterMap/view.html
@@ -16,25 +16,25 @@
                                             <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 form_wrap_margin new_class_for_label">																									
 
                                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                                    <input class="form-control category" id="category" value="1" name="catg[]" type="checkbox">												 
+                                                    <input class="form-control category" value="1" name="catg[]" type="checkbox">												 
                                                     <label for="cat1" class="inline"> 
                                                         Inpatient  </label> 																																								
                                                 </div>
 
                                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                                    <input class="form-control category" id="category" value="2" name="catg[]" type="checkbox">												 
+                                                    <input class="form-control category" value="2" name="catg[]" type="checkbox">												 
                                                     <label for="cat1" class="inline"> 
                                                         Outpatient  </label> 																																								
                                                 </div>
 
                                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                                    <input class="form-control category" id="category" value="3" name="catg[]" type="checkbox">												 
+                                                    <input class="form-control category" value="3" name="catg[]" type="checkbox">												 
                                                     <label for="cat1" class="inline"> 
                                                         Sober Living  </label> 																																								
                                                 </div>
 
                                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                                    <input class="form-control category" id="category" value="4" name="catg[]" type="checkbox">												 
+                                                    <input class="form-control category" value="4" name="catg[]" type="checkbox">												 
                                                     <label for="cat1" class="inline"> 
                                                         Adolescent  </label> 																																								
                                                 </div>
@@ -215,7 +215,7 @@
                         <div onselectstart="return false;" class="unselectable">
                             <div id="mapwrapper">
                                 <div id="map_base">
-                                    <state-Map></state-Map>
+                                    <state-map></state-map>
                                 </div>	
                             </div>							
                         </div>	
@@ -250,3 +250,5 @@
             </div>
 
         </div>							
+      </div>
+</div>
